@@ -1,5 +1,9 @@
 2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>
 
+	* src/lib/defaults.py: Get translations from gnome-games domain.
+
+2006-10-20  Thomas M. Hinkle  <thomas_hinkle@sf.net>
+
 	* Fixed typo that made always-show-hints persist even after it was
 	  unchecked.
 		  
